# mandelbrotset-xyz

./: .gitignore  README.md  package-lock.json  package.json
public/: _headers  _redirects  index.html
src/: App.js  App2.js  Theme.js  index.css
src/components/: AdvancedSettings.js  AltDrawer.js  AppBar.js  BottomBar.js  ColorButtons.js  ControlAccordion.js  Controls.js  CoordinateSetter.js  ExportDialog.js  Form.js  Gallery.js  GradientStyler.js  GradientStyling.js  InfoPanel.js  Library.js  LibraryCard.js  LibraryModal.js  Map.js  MaxIterationsSetter.js  Selector.js  SetZ.js  StateForm.js  StyleTaskActivities.js  TaskDrawer.js  Toolbar.js  mandelbrotset-xyz.code-workspace
src/deepzoom/: DeepZoomView.js
src/firebaseUtils/: auth.js  firestore.js  functions.js
src/hooks/: atoms.js  firestore.js  library.js  mapState.js  state copy.js  state.js  store.js
src/layers/: TileLayerGL.js  TileLayerPureJS.js  TileLayerRustWASM.js
src/utilities/: colors.js  deck.js  deleteMe.js  exportImage.js  gLshaders.js  glGeneration.js  jotaiHelpers.js  mandelbrotUtils.js  math.js  styling.js  tileGeneration.js  webglUtils.js
src/workers/: deepWorker.js  mandelbrotWorker.js  tilePool.js
wasm-lib/: Cargo.toml
wasm-lib/.cargo/: config.toml
wasm-lib/pkg/: package.json  wasm_lib.d.ts  wasm_lib.js  wasm_lib_bg.wasm  wasm_lib_bg.wasm.d.ts
wasm-lib/src/: color.rs  engine.rs  lib.rs  perturbation.rs  precision.rs  reference.rs  tile.rs
