[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM Mandelbrot tile renderer for mandelbrotset.xyz"
license = "MIT"
repository = "https://github.com/patedwards/mandelbrotset-xyz"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# Arbitrary-precision binary float for the perturbation reference orbit.
dashu-float = { version = "0.4", default-features = false, features = ["std"] }
dashu-base = { version = "0.4", default-features = false }
# Double-double (~106-bit) arithmetic for the perturbation epsilon recurrence
# and the direct fallback at extreme depth.
twofloat = { version = "0.7", default-features = false }

[dev-dependencies]
# (host-side unit tests for the math live in src/*.rs behind cfg(test))

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# wasm-pack post-processes the release build with wasm-opt
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O3', '-g']
